// Copyright Â© 2017-2022 Trust Wallet.
//
// This file is part of Trust. The full Trust copyright notice, including
// terms governing use, modification, and redistribution, is contained in the
// file LICENSE at the root of the source code distribution tree.

syntax = "proto3";

package TW.Aptos.Proto;
option java_package = "wallet.core.jni.proto";

// Necessary fields to process a TransferMessage
message TransferMessage {
  // Destination Account address (string)
  string to = 1;
  // Amount to be transferred (uint64)
  uint64 amount = 2;
}

// Necessary tag for type function argument
message StructTag {
  // Address of the account
  string account_address = 1;
  // Module name
  string module = 2;
  // Identifier
  string name = 3;
}

// Necessary fields to process a TokenTransferMessage
message TokenTransferMessage {
  // Destination Account address (string)
  string to = 1;
  // Amount to be transferred (uint64)
  uint64 amount = 2;
  // token function to call, e.g BTC: 0x43417434fd869edee76cca2a4d2301e528a1551b1d719b75c350c3c97d15b8b9::coins::BTC
  StructTag function = 3;
}

// Necessary fields to process a CreateAccountMessage
message CreateAccountMessage {
  // auth account address to create
  string auth_key = 1;
}

// Input data necessary to create a signed transaction.
message SigningInput {
  // Sender Account address (string)
  string sender = 1;
  // Sequence number, incremented atomically for each tx present on the account, start at 0 (int64)
  int64 sequence_number = 2;
  oneof transaction_payload {
    TransferMessage transfer = 3;
    TokenTransferMessage token_transfer = 4;
    CreateAccountMessage create_account = 5;
  }
  // Max gas amount that the user is willing to pay (uint64)
  uint64 max_gas_amount = 6;
  // Gas unit price - queried through API (uint64)
  uint64 gas_unit_price = 7;
  // Expiration timestamp for the transaction, can't be in the past (uint64)
  uint64 expiration_timestamp_secs = 8;
  //  Chain id 1 (mainnet) 32(devnet) (uint32 - casted in uint8_t later)
  uint32 chain_id = 9;
  //  Private key to sign the transaction (bytes)
  bytes private_key = 10;
  // hex encoded function to sign, use it for smart contract approval (string)
  string any_encoded = 11;
}

// Information related to the signed transaction
message TransactionAuthenticator {
  // Signature part of the signed transaction (bytes)
  bytes signature = 1;
  // Public key of the signer (bytes)
  bytes public_key = 2;
}

// Transaction signing output.
message SigningOutput {
  /// The raw transaction (bytes)
  bytes raw_txn = 1;

  /// Public key and signature to authenticate
  TransactionAuthenticator authenticator = 2;

  /// Signed and encoded transaction bytes.
  bytes encoded = 3;

  // Transaction json format for api broadcasting (string)
  string json = 4;
}
